remove unused field
